--- a/brevity.tex
+++ b/brevity.tex
@@ -177,11 +177,11 @@ Shooting things and not getting shot.
 
 \item[Dirt] A \ac{sam} radar appeared on my \ac{rwr}.
 
-\item[Fox 1] I'm shooting a semi-active radar homing \ac{(sarh)}
-    missile, like an \designation{AIM-7} Sparrow.
+\item[Fox 1] I'm shooting a \ac{sarh} missile,
+    like an \designation{AIM-7} Sparrow.
 \item[Fox 2] I'm shooting a heat-seeking missile, like an
     \designation{AIM-9} Sidewinder.
-\item[Fox 3] I'm shooting an active radar homing \ac{(arh)} missile,
+\item[Fox 3] I'm shooting an \ac{arh} missile,
     like an \designation{AIM-120} AMRAAM.
 
 \item[Guns] I'm shooting my cannon.
