--- a/brevity.tex
+++ b/brevity.tex
@@ -72,6 +72,11 @@ Before we dive in, though, a few points:
     \item[Beaming] heading perpendicular to you (provide a direction)
     \end{description}
 
+\item[Bogey Dope] Tell me where the closest threat is.
+    Requested from command and control \ac{(c2)} assets,
+    like an airborne \designation{E-3} Sentry
+    or a ground-based fighter controller.
+
 \item[Bullseye] The thing I'm describing is this direction and distance
     from the \emph{bullseye}.
     The bullseye is a preplanned location everyone has agreed to use for
@@ -92,9 +97,7 @@ Before we dive in, though, a few points:
 
 \item[Declare] Tell me if the contact at the given location
     (using BRAA or a Bullseye call) is friendly or not (see below).
-    Requested from command and control \ac{(c2)} assets,
-    like an airborne \designation{E-3} Sentry
-    or a ground-based fighter controller.
+    Requested from \ac{c2} assets.
 
 \item[Friendly/Bogey/Outlaw/Bandit/Hostile]
     In order of increasing threat:
