Fix call order and small typo
I haven't read everything carefully yet, but saw these two issues.

--- a/brevity.tex
+++ b/brevity.tex
@@ -22,7 +22,7 @@ Before we dive in, though, a few points:
     If I'm leading a flight and I want us to get ready for combat, I'll say,
     ``Flight, fence in''\quotekern, not, ``Flight, lead. Fence in.''
     Similarly, my wingman will just say, ``Two is fenced in\dots''
-    not, ``Two, lead, fenced in\dots''
+    not, ``Lead, two, fenced in\dots''
     Don't be an annoying pedant.
 
 \item If you can't think of the right brevity,
@@ -40,7 +40,7 @@ Before we dive in, though, a few points:
     and you call ``Fox 2, \designation{Mig-21} low''\quotekern,
     I'll take the high one.
 
-    Work with friendlies to build a shared unerstanding of what's going on
+    Work with friendlies to build a shared understanding of what's going on
     around you.
 
 \item Some terms have one version for friendly forces
