Fixed another typo.

--- a/what.tex
+++ b/what.tex
@@ -41,5 +41,5 @@ I'll try to introduce relevant acronyms and terms where I can,
 but I'm bound to miss a few.
 Thankfully, the Internet is full of useful aids---hopefully they can help you
 out.\punckern\footnote{%
-\href{https://www.fighterpilotpodcast.com/glossary/}{The Figheter Pilot Podcast's glossary}
+\href{https://www.fighterpilotpodcast.com/glossary/}{The Fighter Pilot Podcast's glossary}
 is a great example.}
