--- a/what.tex
+++ b/what.tex
@@ -8,21 +8,11 @@ there's lots of great guides to learn how to fly:
 and
 \href{https://www.youtube.com/channel/UCqH078Ef0HENo01LF3xwIvA}{Crash Laobi},
 just to name a few.
-They'll show you how to start up, take off, fly around
-without ripping your wings off, shoot some weapons, and land.
-
-But once you've got a decent grasp on how to fly a jet,
-guides for \emph{employing} that jet seem harder to come by.
-Once you know how not to crash the thing, you probably want to learn how to:
-\begin{itemize}
-\item Dogfight
-\item Shoot other planes beyond visual range \ac{(bvr)}
-\item Defend yourself from a surface-to-air missile \ac{(sam)}
-\item Put a bomb on a target
-\item Act as a wingman or a flight lead, and fly in formation.
-\item Communicate with other pilots, and sound cool doing so
-\end{itemize}
-% \dots all without taking a missile to the face.
+They'll help you start up, take off, fly around, shoot a few weapons, and land.
+But once you're not crashing the jet on a regular basis,
+you'll want to learn how to \emph{employ} the jet---how to dogfight,
+how to put bombs on a target while dodging missiles,
+or how to fly with your friends as a team.
 
 Specific tactics vary from era to era and jet to jet,
 but many of the same fundamentals have held for the last 50
@@ -30,7 +20,7 @@ years.\punckern\footnote{We'll try to discuss how evolving technology
 enables newer tactics as we go.}
 This won't be a comprehensive guide,
 and contributions are welcome.
-But it should outline the basics, and point you to resources where you can
+But it should outline the basics and point you to resources where you can
 learn more.
 
 \section{On Alphabet Soup}
